# olist-analytics

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: 01_sql_fundamentals.ipynb  02_core_queries.ipynb
schema/: create_tables.sql
scripts/: load_data.py
src/olist_analytics/: db.py
src/olist_analytics/handler/: cursor.py
